force-app/main/default/objects/Funding_Award_Performance_Management__c/Funding_Award_Performance_Management__c.object-meta.xml
<CustomObject>
    <description>Object to capture performance review data specific to DESNZ grant schemes. This includes the DGA, Project Tiering and DCA Reports</description>
    <label>Funding Award Performance Management</label>
    <nameField>
        <displayFormat>FPM-{00000}</displayFormat>
        <label>Performance Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Award Performance Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>