force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Change_Requests_Status_RAG__c.field-meta.xml
<CustomField>
    <fullName>DCA_Change_Requests_Status_RAG__c</fullName>
    <label>Change Requests Status RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DESNZ_RAG_5</valueSetName>
    </valueSet>
</CustomField>