force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Change_Requests_Status_RAG_Detail__c.field-meta.xml
<CustomField>
    <fullName>DCA_Change_Requests_Status_RAG_Detail__c</fullName>
    <label>Change Requests Status RAG Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>