force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Completed__c.field-meta.xml
<CustomField>
    <fullName>DCA_Completed__c</fullName>
    <label>DCA Completed</label>
    <type>Date</type>
</CustomField>