force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Data_Timeliness_and_Quality_RAG__c.field-meta.xml
<CustomField>
    <fullName>DCA_Data_Timeliness_and_Quality_RAG__c</fullName>
    <label>Data Timeliness and Quality RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DESNZ_RAG_5</valueSetName>
    </valueSet>
</CustomField>