force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Data_Timeliness_Quality_RAG_Detail__c.field-meta.xml
<CustomField>
    <fullName>DCA_Data_Timeliness_Quality_RAG_Detail__c</fullName>
    <label>Data Timeliness and Quality RAG Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>