force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Finance_management_RAG_Details__c.field-meta.xml
<CustomField>
    <fullName>DCA_Finance_management_RAG_Details__c</fullName>
    <label>XFinance management RAG Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>