force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Fraud_RAG_Detail__c.field-meta.xml
<CustomField>
    <fullName>DCA_Fraud_RAG_Detail__c</fullName>
    <label>XFraud RAG Detail</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>