force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Governance_Controls_RAG__c.field-meta.xml
<CustomField>
    <fullName>DCA_Governance_Controls_RAG__c</fullName>
    <description>Governance &amp; Controls/Consortium Arrangements RAG</description>
    <label>Governance &amp; Controls RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DESNZ_RAG_5</valueSetName>
    </valueSet>
</CustomField>