force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Governance_Controls_RAG_Detail__c.field-meta.xml
<CustomField>
    <fullName>DCA_Governance_Controls_RAG_Detail__c</fullName>
    <description>Governance &amp; Controls/Consortium Arrangements RAG Detail</description>
    <label>Governance &amp; Controls RAG Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>