force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Other_RAG__c.field-meta.xml
<CustomField>
    <fullName>DCA_Other_RAG__c</fullName>
    <description>Any other miscellaneous factors to be taken into account as part of DCA. SHF Only</description>
    <label>Other RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DESNZ_RAG_5</valueSetName>
    </valueSet>
</CustomField>