force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Other_RAG_Detail__c.field-meta.xml
<CustomField>
    <fullName>DCA_Other_RAG_Detail__c</fullName>
    <description>Further information regarding any other miscellaneous factors to be taken into account as part of DCA. SHF Only</description>
    <label>Other RAG Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>