force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Overall_RAG_Justification__c.field-meta.xml
<CustomField>
    <fullName>DCA_Overall_RAG_Justification__c</fullName>
    <label>DCA Overall RAG Justification</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>