force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Phase_Requests_RAG__c.field-meta.xml
<CustomField>
    <fullName>DCA_Phase_Requests_RAG__c</fullName>
    <description>Is visible for SH CF only</description>
    <label>Phase Requests RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DESNZ_RAG_5</valueSetName>
    </valueSet>
</CustomField>