force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Phase_Requests_RAG_Detail__c.field-meta.xml
<CustomField>
    <fullName>DCA_Phase_Requests_RAG_Detail__c</fullName>
    <description>Is visible for SH CF only</description>
    <label>Phase Requests RAG Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>