force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Pipeline_Del_milestones_RAG_Details__c.field-meta.xml
<CustomField>
    <fullName>DCA_Pipeline_Del_milestones_RAG_Details__c</fullName>
    <label>XPipeline Delivery milestones RAG Detail</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>