force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Pipeline_Delivery_milestones_RAG__c.field-meta.xml
<CustomField>
    <fullName>DCA_Pipeline_Delivery_milestones_RAG__c</fullName>
    <label>Pipeline &amp; Delivery milestones RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DESNZ_RAG_5</valueSetName>
    </valueSet>
</CustomField>