force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Resource_Availability_RAG_Detail__c.field-meta.xml
<CustomField>
    <fullName>DCA_Resource_Availability_RAG_Detail__c</fullName>
    <label>Resource Availability RAG Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>