force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Risk_Rating_Detail__c.field-meta.xml
<CustomField>
    <fullName>DCA_Risk_Rating_Detail__c</fullName>
    <label>Risk Rating Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>