force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Risks_and_Issues_RAG_Detail__c.field-meta.xml
<CustomField>
    <fullName>DCA_Risks_and_Issues_RAG_Detail__c</fullName>
    <label>Risks and Issues RAG Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>