force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DCA_Stakeholder_Relationship_Detail__c.field-meta.xml
<CustomField>
    <fullName>DCA_Stakeholder_Relationship_Detail__c</fullName>
    <label>Stakeholder Relationship RAG Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>