force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Delivery_Officer__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Officer__c</fullName>
    <formula>Owner:User.FirstName+&quot; &quot;+Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Officer</label>
    <type>Text</type>
</CustomField>