force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DQA_Completed__c.field-meta.xml
<CustomField>
    <fullName>DQA_Completed__c</fullName>
    <label>DQA Completed</label>
    <type>Date</type>
</CustomField>