force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DQA_Completeness_of_Report__c.field-meta.xml
<CustomField>
    <fullName>DQA_Completeness_of_Report__c</fullName>
    <label>Completeness of Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>