force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DQA_Completeness_of_Report_Detail__c.field-meta.xml
<CustomField>
    <fullName>DQA_Completeness_of_Report_Detail__c</fullName>
    <label>Completeness of Report Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>