force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DQA_Homes_Data_Detail__c.field-meta.xml
<CustomField>
    <fullName>DQA_Homes_Data_Detail__c</fullName>
    <label>Homes Data Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>