force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DQA_Measure_Data__c.field-meta.xml
<CustomField>
    <fullName>DQA_Measure_Data__c</fullName>
    <label>Measure Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>