force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DQA_Other__c.field-meta.xml
<CustomField>
    <fullName>DQA_Other__c</fullName>
    <label>Other</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>