force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DQA_Overall_RAG__c.field-meta.xml
<CustomField>
    <fullName>DQA_Overall_RAG__c</fullName>
    <label>DQA Overall RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DESNZ_RAG_5</valueSetName>
    </valueSet>
</CustomField>