force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DQA_Timeliness_of_Submission__c.field-meta.xml
<CustomField>
    <fullName>DQA_Timeliness_of_Submission__c</fullName>
    <label>Timeliness of Submission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>