force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/DQA_Timeliness_of_Submission_Detail__c.field-meta.xml
<CustomField>
    <fullName>DQA_Timeliness_of_Submission_Detail__c</fullName>
    <label>Timeliness of Submission Detail</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>