force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Finance_management_RAG_Details__c.field-meta.xml
<CustomField>
    <fullName>Finance_management_RAG_Details__c</fullName>
    <label>Finance management RAG Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>