force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/Fraud_RAG_Details__c.field-meta.xml
<CustomField>
    <fullName>Fraud_RAG_Details__c</fullName>
    <label>Fraud RAG Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>