force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/GR_Contact__c.field-meta.xml
<CustomField>
    <fullName>GR_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GR Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funding Award Performance Management</relationshipLabel>
    <relationshipName>Funding_Award_Performance_Management</relationshipName>
    <type>Lookup</type>
</CustomField>