force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/MM_Actions_Update__c.field-meta.xml
<CustomField>
    <fullName>MM_Actions_Update__c</fullName>
    <inlineHelpText>Review progress against actions logged during previous meetings</inlineHelpText>
    <label>Actions Update</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>