force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/MM_Any_Other_Business__c.field-meta.xml
<CustomField>
    <fullName>MM_Any_Other_Business__c</fullName>
    <label>Any Other Business</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>