force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/MM_DCA_Review__c.field-meta.xml
<CustomField>
    <fullName>MM_DCA_Review__c</fullName>
    <inlineHelpText>Review last DCA (RAG + justifications). Discuss any change in circumstances, capture GR considerations on delivery confidence for next month and discuss any discrepancies with the PSO’s own early considerations, given the challenges, risks and forward look discussed above. Confirm understanding of risks and any expected departures from plans, to inform a realistic shared understanding of the delivery confidence. Address any remaining concerns.</inlineHelpText>
    <label>DCA Review</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>