force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/MM_Delivery_Update__c.field-meta.xml
<CustomField>
    <fullName>MM_Delivery_Update__c</fullName>
    <inlineHelpText>Review progress against key milestones and planned delivery for the period since last meeting. Query any variances identified, exploring causes and justification.</inlineHelpText>
    <label>Delivery Update</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>