force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/MM_Forward_look__c.field-meta.xml
<CustomField>
    <fullName>MM_Forward_look__c</fullName>
    <inlineHelpText>Review planned delivery for the current month including confidence in meeting forecast KPI figures, check expected completion dates for scheduled critical path milestones and the submission of Batch and Phase Requests. Query any discrepancies identified, asking probing questions to determine associated causes and justifications.</inlineHelpText>
    <label>Forward look</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>