force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/MM_Key_Challenges_Risks_and_Issue__c.field-meta.xml
<CustomField>
    <fullName>MM_Key_Challenges_Risks_and_Issue__c</fullName>
    <inlineHelpText>Review live top risks, issues and dependencies; check progress of ongoing risk responses; explore any emerging risks, issues or assumptions associated with plan discrepancies identified. Explore any support needs with the Grant Recipient and agree corrective actions, where required – this may include considering deployment of additional Delivery Partner support</inlineHelpText>
    <label>Key Challenges, Risks and Issue</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>