force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/MM_Monthly_Report_Update__c.field-meta.xml
<CustomField>
    <fullName>MM_Monthly_Report_Update__c</fullName>
    <inlineHelpText>Review KPIs and key metrics being reported in the current month and query any discrepancies from expected figures, exploring causes and justification. Address any past incomplete or substandard report submissions, using DQA considerations. Review implementation of corrective actions previously agreed and/or agree any new actions.</inlineHelpText>
    <label>Monthly Report Update</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>