force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/MM_Next_steps_and_follow_up__c.field-meta.xml
<CustomField>
    <fullName>MM_Next_steps_and_follow_up__c</fullName>
    <inlineHelpText>Confirm and record any new actions agreed during the meeting and agree any follow-up discussions, where required.</inlineHelpText>
    <label>Next steps and follow-up</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>