force-app/main/default/objects/Funding_Award_Performance_Management__c/fields/MM_Performance_Status__c.field-meta.xml
<CustomField>
    <fullName>MM_Performance_Status__c</fullName>
    <inlineHelpText>Capture GR self-assessed performance rating and discuss any discrepancies with PSO early assessment, given the actions, delivery, reporting and spend updates discussed above. Review the progress and impact of Direct Advisory Support being deployed, where appropriate. Review the progress of Remediation Plan being developed or implemented, where appropriate.</inlineHelpText>
    <label>Performance Status</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>